Header nav fixed

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -5,10 +5,15 @@ body {
 }
 
 header {
-    display: flex;
     background: teal;
     padding: 2rem;
     grid-column: 1 / 4;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .left-side {
