--- a/styles/temples.css
+++ b/styles/temples.css
@@ -45,11 +45,12 @@ body {
 
 header {
     background-color: var(--primary_color);
-    padding: 20px;
+    padding: 10px 20px;
     font-size: 1.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 header h1 {
@@ -85,13 +86,15 @@ main {
     font-family: "Spectral", serif;
     font-weight: 400;
     font-style: normal;
-    margin: 20px;
+    margin: 20px auto;
     display: grid;
     grid-template-columns: 1fr;
     gap: 25px;
+    width: 90%;
 }
 
 main h2 {
+    text-align: center;
     font-size: 2rem;
     margin-bottom: 10px;
 }
