--- a/styles/temples.css
+++ b/styles/temples.css
@@ -108,6 +108,7 @@ footer {
     background-color: var(--primary_color);
     padding: 20px;
     margin-top: 40px;
+    width: 100%;
 }
 footer p {
     margin: 10px 0;
