--- a/styles/temples.css
+++ b/styles/temples.css
@@ -40,46 +40,66 @@ body {
     font-family: "Poppins", serif;
     font-weight: 400;
     font-style: normal;
-    text-align: center;
 }
 
 header {
     background-color: var(--primary_color);
     padding: 10px 20px;
-    font-size: 1.5rem;
+    font-size: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+header button {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: white;
+    z-index: 1001;
 }
 
 header h1 {
-    padding: 0;
-    text-align: left;
     flex-grow: 1;
     margin-right: 20px;
+    white-space: nowrap;
 }
 
 header nav {
-    background-color: var(--accent_color2);
+    display: none;
+    flex-direction: column;
+    background-color: var(--primary_color);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    gap: 10px;
+    padding: 20px 0;
+    box-shadow: 0px 4px 6px rgba( 0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+header nav.open {
     display: flex;
-    gap: 100px;
-    flex-shrink: 2;
 }
 
 header nav a {
     text-decoration: none;
     color: black;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    padding: 10px 20px;
+    text-align: center;
 }
 
 header nav a:hover {
     text-decoration: underline;
-    color: blue;
-}
-
-.active {
-    color: var(--accent2_color);
+    background-color: var(--accent2_color);
+    color: blueviolet;
 }
 
 main {
@@ -89,26 +109,30 @@ main {
     margin: 20px auto;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 25px;
+    gap: 20px;
     width: 90%;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
 }
 
 main h2 {
-    text-align: center;
     font-size: 2rem;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 main img {
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba( 0, 0, 0, 0.5);
+    width: 100%;
+    max-width: 300px;
+    height: auto;
 }
 
 footer {
     background-color: var(--primary_color);
-    padding: 20px;
-    margin-top: 40px;
-    width: 100%;
+    padding: 10px 0;
+    text-align: center;
 }
 footer p {
     margin: 10px 0;
@@ -116,4 +140,15 @@ footer p {
 
 footer #currentyear {
     font-weight: bold;
+}
+
+
+@media only screen and (max-width: 768px) {
+    header button {
+        display: block;
+    }
+
+    main {
+        grid-template-columns: 1fr;
+    }
 }
