--- a/styles/temples.css
+++ b/styles/temples.css
@@ -129,6 +129,10 @@ main img {
     height: auto;
 }
 
+main figcaption {
+    padding: 10px;
+}
+
 footer {
     background-color: var(--primary_color);
     padding: 10px 0;
