--- a/styles/place.css
+++ b/styles/place.css
@@ -1,3 +1,11 @@
+:root {
+    --primary_color: #7FFFD4;
+    --secondary_color: #FFAFC5;
+    --accent1_color: #373F51;
+    --accent2_color: #53A2BE;
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -42,7 +50,7 @@ html, body {
     line-height: 1.6;
     display: flex;
     flex-direction: column;
-    background-color: #373F51;
+    background-color: var(--accent1_color);
 }
    
 /* h1, th {
@@ -53,7 +61,7 @@ html, body {
 
 header {
     text-align: center;
-    background-color: aquamarine;
+    background-color: var(--primary_color);
     width: 100%;
     padding: 10px;
 }
@@ -77,7 +85,7 @@ table{
     max-width: 600px;
     border-collapse: collapse;
     margin: 10px auto;
-    background-color: #FFAFC5;
+    background-color: var(--secondary_color);
     box-shadow: 0px 4px 6px rgba( 0, 0, 0, 1);
     border-radius: 10px;
 }
@@ -101,7 +109,7 @@ td {
 }
 
 footer{
-    background-color: aquamarine;
+    background-color: var(--primary_color);
     text-align: center;
     width: 100%;
     padding: 10px;
@@ -130,7 +138,7 @@ footer{
 
     th {
         text-align: left;
-        background-color: #373F51;
+        background-color: var(--accent1_color);
         border-radius: 10px;
         color: white;
     }
