--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -40,12 +40,13 @@ body {
     font-family: "Poppins", serif;
     font-weight: 400;
     font-style: normal;
+    padding: 0;
+    margin: 0;
 }
 
 header {
     background-color: var(--primary_color);
     padding: 10px 20px;
-    font-size: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
