--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -56,7 +56,7 @@ header {
     z-index: 1000;
 }
 header button {
-    display: none;
+    display: block;
     background: none;
     border: none;
     font-size: 1.5rem;
