--- a/styles/place.css
+++ b/styles/place.css
@@ -52,12 +52,6 @@ html, body {
     flex-direction: column;
     background-color: var(--accent1_color);
 }
-   
-/* h1, th {
-    font-family: "Spectral", serif;
-    font-weight: 400;
-    font-style: normal;
-} */
 
 header {
     text-align: center;
@@ -141,6 +135,16 @@ footer{
         background-color: var(--accent1_color);
         border-radius: 10px;
         color: white;
+    }
+    
+    th img {
+        display: none;
+    }
+
+    .weather-pic:first-of-type::after {
+        content: " ⛅";
+        font-size: 1.5rem;
+        margin-left: 10px;
     }
     
     table:first-of-type {
