--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -77,7 +77,7 @@ header {
 
 header h1 {
     font-family: "Volkhov", serif;
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 header nav {
@@ -118,10 +118,50 @@ main h3 {
     margin-bottom: 0.5rem;
 }
 
+main h4 {
+    font-family: "Volkhov", serif;
+    color: var(--primary-color);
+    margin-bottom: 0.5rem;
+    padding: 20px;
+}
+
 main p {
     line-height: 1.5;
     margin-bottom: 1rem;
 }
+.frame {
+    text-align: center;
+}
+
+.desk-view {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    height: auto; 
+}
+
+.desk-view img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    object-fit: contain; 
+}
+
+@media (min-width: 650px) {
+    .desk-view {
+        width: auto;
+        max-width: 90%;
+        margin: 0 auto; 
+    }
+
+    .desk-view img {
+        width: 100%;
+        height: auto; 
+        max-height: 80vh;
+        object-fit: contain;
+    }
+}
+
 
 footer {
     text-align: center;
