--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -68,7 +68,7 @@ header {
     align-items: center;
     padding: 1rem;
     background: linear-gradient(to right, var(--accent3-color), var(--secondary-color));
-    color: white;
+    color: black;
     border-bottom: 3px solid var(--secondary-color);
     position: sticky;
     top: 0;
@@ -87,7 +87,7 @@ header nav {
 
 header nav a {
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: bold;
     padding: 0.5rem 1rem;
     border-radius: 5px;
@@ -107,7 +107,7 @@ main {
 
 main h2 {
     font-family: "Volkhov", serif;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 1rem;
     text-align: center;
 }
@@ -167,7 +167,7 @@ footer {
     text-align: center;
     padding: 1rem;
     background: linear-gradient(to right, var(--secondary-color), var(--accent3-color));
-    color: white;
+    color: black;
     font-size: 0.9rem;
     border-top: 3px solid var(--primary-color);
     position: sticky;
