Fixed footer on review page

--- a/styles/form.css
+++ b/styles/form.css
@@ -89,6 +89,8 @@ fieldset {
 }
 
 footer {
+    position: absolute;
+    bottom: 0;
     background-color: var(--primary-color);
     width: 100%;
     padding: .8rem;
