--- a/project/styles/the-diver.css
+++ b/project/styles/the-diver.css
@@ -112,7 +112,7 @@ header nav {
 
 
 nav a {
-    color: blue;
+    color: rgb(17, 17, 85);
     text-shadow: 1px 1px black;
     text-decoration: none;
     margin: 0 10px;
@@ -123,7 +123,7 @@ nav a {
 
 nav a:link,
 nav a:visited {
-    color: blue;
+    color: rgb(17, 17, 85);
     text-shadow: 1px 1px black;
 }
 
